# transport-optimal-gdrigrv-11-2020

c++/slicedOT/: CMakeLists.txt  colorTransfer.cpp
